Rename button for profile image selection to 'Daisy'

--- a/index.html
+++ b/index.html
@@ -668,9 +668,9 @@
                          <img src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f337.svg" class="w-full h-full object-contain">
                     </button>
 
-                    <!-- 6. Lotus -->
-                    <button onclick="selectProfileImage('https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1ffab.svg')" class="aspect-square rounded-full border-2 border-transparent hover:border-primary hover:scale-105 transition-all overflow-hidden bg-gray-100 p-3">
-                         <img src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1ffab.svg" class="w-full h-full object-contain">
+                    <!-- 6. Daisy -->
+                    <button onclick="selectProfileImage('https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f33c.svg')" class="aspect-square rounded-full border-2 border-transparent hover:border-primary hover:scale-105 transition-all overflow-hidden bg-gray-100 p-3">
+                         <img src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f33c.svg" class="w-full h-full object-contain">
                     </button>
                 </div>
             </div>
